Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.3 ----------

[w2x] New style map "heading" to map styles applied to headings to custom styles. 

[w2x] The option "use_list_hack" has been renamed to "list_formatting" with the new values "css1", "css1_hack" and "hard_labels".
  The two first values corresponds to "false" and "true" of the old option. The new value requests that
  list labels are exported as part of the text rather than by style. This allows for full support of list numbering.

[w2x] Now includes a space after the list label if the list style defines that the label is followed by a tab or a space

[w2l] Now recognize the "numbered formula" AutoText provided with OOo as a display equation

[w2l] Bugfix: Display equations in flat XML are now recognized correctly

[w2x] Bugfix: Now adds XML prolog for XHTML 1.1 documents

[w2x] XHTML templates without <head> and/or <body>are now allowed. If no content element is found, the
  root element is used

[w2x] Added help content for export dialogs

---------- version 1.1.2 ----------

[w2l] Added help content for export dialog

[all] API change: Added the method readStyleSheet to the Converter interface

[w2x] The custom configuration now supports an optional xhtml template (writer2xhtml-template.xhtml)
  in the same directory as writer2xhtml.xml

[w2x] The xhtml configuration now also supports complex options in the API

[w2x] Bugfix: Corrected problem with relative links (this affected package format only)

[w2x] Added EPUB export

[all] API change: The interface ConverterResult supports an additional method to access the
  meta data of the source document. A new interface MetaData has been introduced to support this

[all] API change: The interface ConverterResult supports additional methods providing pointers to
  headings and index tables in the document. A new interface TocEntry has been introduced to support this 
